ai_bot_added
